@@ -10,6 +10,7 @@
 
 For more details, please see the README file.
 
+	- feat: Add bugfix in case of leading or trailing white space in SV type values from the SV input BED file
 	- feat: Change the -genomeBuild default value to "GRCh38" (instead of GRCh37)
 	- refactor: Use boolean values (instead of "yes"/"no") for the following values: -candidateGenesFiltering, -includeCI, -overwrite, -reciprocal, -REreport, -REselect1 and -REselect2
 	- feat: Complete the regulatory element annotation:
